--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html dir="ltr" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Stencil Starter App</title>
+  <title>Ionic PWA Toolkit</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <meta name="theme-color" content="#16161d">
