--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>Ionic PWA Toolkit</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
+  <meta name="Description" content="Welcome to the Ionic PWA Toolkit. You can use this starter to build fast PWAs using Ionic and Stencil!">
   <meta name="theme-color" content="#16161d">
 
   <meta name="apple-mobile-web-app-capable" content="yes">
