feat(css): document level css

--- a/src/index.html
+++ b/src/index.html
@@ -1,38 +1,29 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
-
 <head>
   <meta charset="utf-8">
   <title>Ionic PWA Toolkit</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
-  <meta name="Description" content="Welcome to the Ionic PWA Toolkit. You can use this starter to build fast PWAs using Ionic and Stencil!">
+  <meta name="description" content="Welcome to the Ionic PWA Toolkit. You can use this starter to build fast PWAs using Ionic and Stencil!">
   <meta name="theme-color" content="#16161d">
 
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <link rel="apple-touch-icon" href="/assets/icon/icon.png">
   <meta name="apple-mobile-web-app-title" content="Ionic PWA">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-  <meta http-equiv="x-ua-compatible" content="IE=Edge"/>
+  <meta http-equiv="x-ua-compatible" content="IE=Edge">
 
+  <link href="/build/app.css" rel="stylesheet">
   <script src="/build/app.js"></script>
 
+  <link rel="apple-touch-icon" href="/assets/icon/icon.png">
   <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
   <link rel="manifest" href="/manifest.json">
 </head>
-
 <body>
 
   <my-app></my-app>
 
-  <style>
-    body {
-      margin: 0px;
-      padding: 0px;
-      font-family: sans-serif;
-    }
-  </style>
 </body>
-
 </html>
