chore(): update to latest

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
   <meta http-equiv="x-ua-compatible" content="IE=Edge">
 
-  <link href="/build/app.css" rel="stylesheet">
+  <!-- <link href="/build/app.css" rel="stylesheet"> -->
   <script src="/build/app.js"></script>
 
   <link rel="apple-touch-icon" href="/assets/icon/icon.png">
