fix(theming): add back link to app.css file

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
   <meta http-equiv="x-ua-compatible" content="IE=Edge">
-
+  
+  <link href="/build/app.css" rel="stylesheet">
   <script src="/build/app.js"></script>
 
   <link rel="apple-touch-icon" href="/assets/icon/icon.png">
