--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>Ionic PWA Toolkit</title>
+  <title>PWA Toolkit</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <meta name="description" content="Welcome to the Ionic PWA Toolkit. You can use this starter to build fast PWAs using Ionic and Stencil!">
@@ -13,7 +14,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
   <meta http-equiv="x-ua-compatible" content="IE=Edge">
-  
+
   <link href="/build/app.css" rel="stylesheet">
   <script src="/build/app.js"></script>
 
@@ -21,9 +22,11 @@
   <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
   <link rel="manifest" href="/manifest.json">
 </head>
+
 <body>
 
   <my-app></my-app>
 
 </body>
+
 </html>
