feat(index): NOSCRIPT tag fixing Lighthouse Audit issue

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,13 @@
 <body>
 
   <app-root></app-root>
+  <noscript>
+    <div style="font-size: 18px;font-family: Helvetica,sans-serif;line-height: 24px;margin: 10%;padding: 5%;width: 80%;background-color: #488aff;color: #fff; text-align: center;">
+      <p style="font-size: 40px;">⚠</p>
+      <p>It seems that <em style="font-weight: bolder; text-decoration: underline;">JavaScript is disabled</em> in your browser.</p>
+      <p>Please enable it or use another browser.</p>
+    </div>
+  </noscript>
 
 </body>
 
