fix(add to home screen): add icon192 and apple-touch-icon

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   <link href="/build/app.css" rel="stylesheet">
   <script src="/build/app.js"></script>
 
-  <link rel="apple-touch-icon" href="/assets/icon/icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon.png">
   <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
   <link rel="manifest" href="/manifest.json">
 </head>
